--- a/MiniPanelTest/app/src/main/AndroidManifest.xml
+++ b/MiniPanelTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tclxa.minipanel.minipaneltest"
+    package="com.i029.minipanel.minipaneltest"
     coreApp="true"
     android:sharedUserId="android.uid.system">
 
