Add 8bpp library , must set MICROPANEL_BPP same in Android.mk and Makefile[kernel driver]

--- a/kernel_driver/oled/Makefile
+++ b/kernel_driver/oled/Makefile
@@ -2,6 +2,8 @@
 subdir-ccflags-y += -DUSE_GPIO \
 -I$(srctree)/drivers/spi/mediatek/$(MTK_PLATFORM)
 
+subdir-ccflags-y += -DMICROPANEL_BPP=1
+
 obj-y	+= OledMono.o
 obj-y	+= OledDriver_intf.o
 obj-y	+= OledDriver_2832TSWUG01.o
